--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "axios": "^1.7.4",
     "moment": "^2.30.1",
     "next": "14.2.5",
     "react": "^18",
