--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "axios": "^1.7.4",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.509.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
